--- a/crypto_fusion_frontend/package.json
+++ b/crypto_fusion_frontend/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.321.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-day-picker": "^8.10.1",
