--- a/crypto_fusion_server/pom.xml
+++ b/crypto_fusion_server/pom.xml
@@ -95,6 +95,11 @@
             <version>28.3.0</version>
         </dependency>
         <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
