--- a/crypto_fusion_server/pom.xml
+++ b/crypto_fusion_server/pom.xml
@@ -100,6 +100,11 @@
             <version>4.0.0</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
